--- a/Elevator/Config/DefaultEngine.ini
+++ b/Elevator/Config/DefaultEngine.ini
@@ -15,7 +15,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Noncence/NewGameMode.NewGameMode_C
+GlobalDefaultGameMode=/Game/Noncence/ElevatorGameMode.ElevatorGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
